# paper2slides

./: .gitignore  AGENTS.md  PROJECT_LOG.md  README.md  TASKS.md  pyproject.toml
archives/page-object-detection/: README.md  compile_and_annotate_dataset.py  generate_dataset.py  generate_latex.py  generate_latex_nougat.py  latex_dataset0.pos  nougat_fullpage.py  nougat_ocr_wrapper.py  organize_dataset.py  page_objects.py  preprocess_image.py  requirements.txt  resume_training.py  run_assemble.py  run_detection.py  run_ocr.py  run_sorting.py  train.py  train_cpu_final.py  train_stable.py  visualize_check.py
docs/: architecture.md  reading-order-evaluation.md
eval-sets/: findings-acl-2024-v1-gold-fields.md  findings-acl-2024-v1.md
experiments/: 2026-04-09-abstract-heuristic-v1.md  2026-04-09-caption-label-repair-v1.md  2026-04-09-caption-reference-cleanup-v1.md  2026-04-09-column-aware-layout-flattening-v1.md  2026-04-09-empty-subsection-parent-v1.md  2026-04-09-formula-like-relaxation-v1.md  2026-04-09-heading-heuristic-v1.md  2026-04-09-hybrid-body-ordering-v1.md  2026-04-09-local-paragraph-repair-v1.md  2026-04-09-pdftotext-layout-comparison-v1.md  2026-04-09-reading-order-citation-normalization-v1.md  2026-04-09-reading-order-eval-protocol-v1.md  2026-04-09-reading-order-normalization-v1.md  2026-04-09-structural-miss-heuristic-v1.md  2026-04-09-structured-document-v0-schema-v1.md  2026-04-09-subsection-cleanup-v1.md  2026-04-09-title-heuristic-v1.md
scripts/: eval_reading_order.py
src/pdf2slides/: cli.py  (+4 more)
tests/: test_pipeline.py  test_reading_order_eval.py
(+11 files in other folders)
